# cognition-mesh-test-chamber

./: .gitattributes  .gitignore  CHANGELOG.md  GLOSSARY.md  README.md  RELEASE_CHECKLIST.md  codex-brief-cognition-mesh-test-chamber.txt  new-direction.md  pyproject.toml
cm_test_chamber/: __init__.py  cli.py
configs/: evaluator_benchmark_targets.json
configs/catalogs/: assistant_models.json  models_under_test.json
configs/gauntlets/: mvp_general_gauntlet.json
configs/hosts/: schema_locked_no_tools.json
configs/models/: local_http_example.json  local_qwen3_8b_vulkan.json  mock_model.json
configs/task_profiles/: mvp_probe_pack.json
docs/: cognitive-fingerprint.md  dashboard.md  local-model-run.md  mock-walkthrough.md  model-catalogs.md  negative-lane-engine.md  negative-lanes.md  operator-quickstart.md  philosophy.md  preflight.md  sandbox-model.md  task-shapes.md  user-manual.md  v0_1_acceptance.md  v0_2_acceptance.md
probes/capability/: ambiguity_handling.json  correction_recovery.json  (+2 more)
scripts/: start_assistant_server.ps1  start_dashboard.ps1  start_qwen3_server.ps1
src/: __init__.py
tests/: conftest.py  test_assistant_review.py  test_cli_draft_probes.py  test_cli_gauntlet_atlas.py  test_dashboard.py  test_evaluator_benchmark.py  test_gauntlet_decisions.py  test_gauntlet_history.py  test_gauntlet_loader.py  test_gauntlet_runner_mock.py  test_mock_run.py  test_model_catalog.py  test_negative_lane_generator.py  test_patch_guard.py  test_preflight.py  test_probe_draft_validator.py  test_probe_forge.py  test_report_outputs.py  test_schema_eval.py
(+45 files in other folders)
